styles.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}


@font-face {font-family: Merriweather-bold;
            src: url('./fonts/Merriweather/Merriweather-Bold.ttf')
}

body{
    display: flex;
    justify-content: center;
    margin: 0;
}

.title-page {
    width: min(40vw, 480px);
    height: 100vh;
    background: no-repeat center url(./images/laptop-screen-opening.jpg);
    background-size: cover;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.title {
    font-family: Merriweather-Bold, Arial, Helvetica, Tahoma;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: clamp(3rem, 5.1vw, 4.5rem);
    margin-top: 18vh;
    width: 100%;
    height: 7rem;
}

.title > img {
    height: clamp(4rem, 6.8vw, 6.4rem);
}

.author-credit{
    color: rgb(255, 255, 255, .7);
    margin: auto 1rem 1rem;
    font-size: clamp(0.7rem, 1.1vw, 0.9rem);
}

:link, :visited {
    color: rgb(255, 255, 255, .7);
}

.form {
    display: flex;
    flex-direction: column;
    background-color: #eeeeee;
    width: min(60vw, 720px);
    height: 100vh;
    font-family: Verdana, Tahoma, sans-serif;
    color: black;
}

.text {
    margin: 7rem 2rem 2rem;
}

div > p {
    font-size: 1.4rem;
    margin: 1.4rem 1px;
    width: 45vw;
}

form {
    padding: 2rem;
}

fieldset>div{
    display: flex;
    flex-direction: column;
}

button {
    color: white;
    margin: 2rem;
    background-color: black;
    font-size: 1.1rem;
    font-weight: 600;
    width: 12rem;
    height: 2.8rem;
    border-radius: 5px;
    border-style: solid;
    border-width: 1px;
    border-color: #444444;
    box-shadow: 2px 2px 2px #999999;
}

.account-made {
    margin: 2rem;
    word-spacing: -1px;
}

.account-made > a:visited, 
.account-made > a:link {
    color: rgb(38, 48, 255, 0.8);
    text-decoration: none;
    word-spacing: -3px;
}

